--- a/дз4/main.css
+++ b/дз4/main.css
@@ -1,9 +1,47 @@
-.text7 {
-    font-style:italic
-    font-size="x-small"
-    
+
+
+.p1 {
+   
+font-weight: 300;
+font-size: 14px;
+font-family: Playfair Display;
+color:#B4AD9E;
+;
 }
-.body {
-    background-color: pink;
-    text-align: right;
+.text1 {
+    font-family: Ubuntu;
+    font-size: 14px;
+    font-weight: 300;
+
+}
+.lifestyle {
+    color: #03A9F4;
+}
+.text2 {
+    color: #B4AD9E;
+}
+h3 {
+   
+    color: #626262;
+    font-family: Playfair Display;
+font-size: 30px;
+font-weight: 400;
+}
+.text3 {
+    font-family: Playfair Display;
+font-size: 14px;
+font-weight: 400;
+color: #626262;
+
+}
+button {
+    height: 60px;
+width: 165px;
+left: 0px;
+top: 0px;
+border-radius: 0px;
+text-align: center;
+border: 1px solid #626262
+
+
 }
