--- a/дз3/main.css
+++ b/дз3/main.css
@@ -1,4 +1,4 @@
-h3 {
+#h3 {
 
 text-align: center;
 }
@@ -18,7 +18,7 @@ color: rgb(213, 116, 116);
 center {
     background-color: #636962;
 }
-.instagram {
+#id_instagram {
     text-align: right;
     
 }
@@ -33,7 +33,7 @@ body {
     background-image: url(https://celes.club/uploads/posts/2022-11/1667259045_1-celes-club-p-delovoi-fon-dlya-prezentatsii-oboi-1.jpg)
   
 }
- .wrapper {
+ *.wrapper {
     max-width: 1300px;
     margin-left: auto;
     margin-right: auto;
