--- a/дз9/main.css
+++ b/дз9/main.css
@@ -8,11 +8,11 @@
     align-items: center;
     padding: 18px 32px;
     gap: 19px;
-    
+    border: none;
     position: relative;
     width: 102px;
     height: 47px;
-    
+    margin: 50px;
     background: #B8DAFF;
  }
  .text1 {
@@ -36,11 +36,11 @@ justify-content: center;
 align-items: center;
 padding: 18px 32px;
 gap: 10px;
-
+border: none;
 position: relative;
 width: 150px;
 height: 49px;
-
+margin: 50px;
 background: #3A86FF;
 border-radius: 30px;
  }
@@ -67,7 +67,7 @@ outline:          none;
     background-color: white;
     height: 12px;
 width: 175px;
-
+margin: 50px;
 border-radius: 0px;
 
  }
@@ -98,7 +98,7 @@ background-color: white;
 position: relative;
 width: 124px;
 height: 48px;
-
+margin: 50px;
 border: 1px dashed #E63946;
  }
  .text4 {
@@ -119,7 +119,7 @@ color: #1D3557;
  }
  .button5 {
     box-sizing: border-box;
-
+margin: 50px;
 display: flex;
 flex-direction: row;
 justify-content: center;
