--- a/дз22/main.css
+++ b/дз22/main.css
@@ -6,15 +6,18 @@
    margin-left: 200px;
    margin-top: 100px;
    animation-name: task1;
-   animation-timing-function: 20%;
+   animation-timing-function: linear;
    animation-duration: 5s;
    background-color: aquamarine;
    animation-iteration-count: 3;
 }
 @keyframes task1 {
 0% {background-color: black;}
-50% {background-color: pink;}
-100% {background-color: violet;}
+20% {background-color: brown;}
+40% {background-color: pink;}
+60% {background-color: violet;}
+80% {background-color: red;}
+100% {background-color: black;}
 }
 .task2-for-animation {
 height: 100px;
@@ -35,13 +38,13 @@ transition-timing-function: linear;
     height: 250px;
     width: 250px;
 }
-    50% {
-        height: 200px;
-    width: 200px;
-    }
-    100% {
+    20% {
         height: 100px;
     width: 100px;
+    }
+    80% {
+        height: 150px;
+    width: 150px;
     }
 }
 .quadrate {
